# apify-scripts-for-prospect-report

./: APP_STRUCTURE_DOCUMENTATION.md  MONGODB_STORAGE_GUIDE.md  README.md  cleanup_json_files.py  debug_erasmus_actor_simple.py  debug_erasmus_raw_20250523_201426.json  duns_filtered_output.json  duns_raw_output.json  duns_raw_output_formatted.json  env.example  erasmus_actor_domain_test_3_20250523_200742.json  erasmus_actor_name_test_3_20250523_200752.json  erasmus_org_result_www.eur.nl_20250523_195420.json  erasmus_website_test_5_20250523_192538.json  linkedin_company_final_demo_20250524_123439.json  linkedin_company_final_output_20250524_122703.json  linkedin_company_output.json  linkedin_company_raw_output_20250524_123942.json  linkedin_company_real_output_20250524_120823.json  linkedin_company_summary_20250524_122703.json  linkedin_posts_scraper_output_20250523_182910.json  linkedin_posts_test_1_20250523_182629.json  linkedin_profile_scraper_error_20250523_181619.json  linkedin_profile_scraper_output_20250523_182242.json  linkedin_raw_output_20250524_123745.json  linkedin_test_3_20250523_182140.json  pyproject.toml  pytest.ini  requirements.txt  start_api.py  test_erasmus_actor.py  test_erasmus_company_names.py  test_erasmus_correct_format.py  test_erasmus_debug.py  test_erasmus_domains.py  test_erasmus_formats.py  test_erasmus_organisation_scraper.py  test_erasmus_simple_terms.py  test_erasmus_website.py  test_linkedin_posts_formats.py  (+9 more)
.cursor/: mcp.json
app/: __init__.py  main.py
app/actors/: __init__.py  base.py  config.py  utils.py
app/actors/company/: __init__.py  duns_actor.py  erasmus_actor.py  service.py  transformers.py  validators.py  zoominfo_actor.py
app/actors/linkedin/: README_COMPANY.md  __init__.py  company_actor.py  posts_actor.py  posts_scraper.py  profile_actor.py  profile_scraper.py  service.py  transformers.py  validators.py
app/actors/social/: __init__.py  facebook_actor.py  service.py  transformers.py  twitter_actor.py  validators.py
app/api/: __init__.py
app/api/models/: __init__.py  requests.py  responses.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: actors.py  company.py  health.py  linkedin.py  prospect.py  social.py  validation.py
app/core/: __init__.py  apify_client.py  config.py  exceptions.py  logging.py
app/cost/: controller.py  manager.py  service.py
app/models/: data.py
app/orchestration/: orchestrator.py  processor.py  service.py
app/services/: prospect_analysis.py  storage.py
app/validation/: quality_scorer.py  service.py  validator.py
scripts/: prd.txt
tests/: __init__.py  conftest.py  utils.py
tests/actors/linkedin/: test_company_actor.py  test_profile_scraper.py
tests/fixtures/: __init__.py  company_data.py  linkedin_data.py  social_media_data.py
tests/integration/: test_linkedin_profile_integration.py
